2009-09-09 r138 Issue #104 Add a CHANGELOG file