@@ -5,7 +5,7 @@
 {% block helpdesk_body %}{% blocktrans with ignore.email_address as email_address %}
 <h2>Un-Ignore E-Mail Address</h2>
 
-<p>Are you sure you wish to stop removing this email address (<em>{{ email_address }}</em>) and allow their e-mails to automatically create tickets in your system? You can re-add this e-mail address at any time.<?p>
+<p>Are you sure you wish to stop removing this email address (<em>{{ email_address }}</em>) and allow their e-mails to automatically create tickets in your system? You can re-add this e-mail address at any time.</p>
 {% endblocktrans %}
 
 {% blocktrans %}<p><a href='../../'>Keep Ignoring It</a></p>
