@@ -67,16 +67,21 @@
 </tr>
 
 <tr class='row_odd'>
+    <th>{% trans "Copies To" %}</th>
+    <td>{% for ticketcc in ticket.ticketcc_set.all %}{{ ticketcc.display }}{% if not forloop.last %}, {% endif %}{% endfor %} <strong><a href='{% url helpdesk_ticket_cc ticket.id %}'>{% trans "Manage" %}</a></strong></td>
+</tr>
+
+<tr class='row_even'>
     <th colspan='2'>{% trans "Description" %}</th>
 </tr>
-<tr class='row_even'>
+<tr class='row_odd'>
     <td colspan='2'>{{ ticket.description|force_escape|linebreaksbr }}</td>
 </tr>
 
-{% if ticket.resolution %}<tr class='row_odd'>
+{% if ticket.resolution %}<tr class='row_even'>
     <th colspan='2'>{% trans "Resolution" %}{% ifequal ticket.get_status_display "Resolved" %} <a href='?close'><img src='{{ MEDIA_URL }}helpdesk/buttons/accept.png' alt='{% trans "Accept" %}' title='{% trans "Accept and Close" %}' width='60' height='15' /></a>{% endifequal %}</th>
 </tr>
-<tr class='row_even'>
+<tr class='row_odd'>
     <td colspan='2'>{{ ticket.resolution|force_escape }}</td>
 </tr>{% endif %}
 
