@@ -1,0 +1,31 @@
+{% extends "helpdesk/base.html" %}{% load i18n %}
+
+{% block helpdesk_title %}{% trans "Ticket CC Settings" %}{% endblock %}
+
+{% block helpdesk_body %}{% blocktrans with ticket.title as ticket_title and ticket.id as ticket_id %}
+<h2>Ticket CC Settings</h2>
+
+<p>The following people will receive an e-mail whenever <em><a href='../'>{{ ticket_title }}</a></em> is updated. Some people can also view or edit the ticket via the public ticket views.</p>
+
+<p>You can <a href='add/'>add a new e-mail address to the list</a> or delete any of the items below as required.</p>{% endblocktrans %}
+
+<table width='100%'>
+<thead>
+<tr class='row_tablehead'><td colspan='4'>{% trans "Ticket CC List" %}</td></tr>
+<tr class='row_columnheads'><th>{% trans "E-Mail Address" %}</th><th>{% trans "View?" %}</th><th>{% trans "Update?" %}</th><th>{% trans "Delete" %}</th></tr>
+</thead>
+<tbody>
+{% for person in copies_to %}
+<tr class='row_{% cycle odd,even %}'>
+    <td>{{ person.display }}</td>
+    <td>{{ person.can_view }}</td>
+    <td>{{ person.can_update }}</td>
+    <td><a href='{% url helpdesk_ticket_cc_del ticket.id person.id %}'>{% trans "Delete" %}</a></td>
+</tr>
+{% endfor %}
+</tbody>
+</table>
+
+<p><a href='{% url helpdesk_view ticket.id %}'>{% blocktrans with ticket.title as ticket_title %}Return to <em>{{ ticket_title }}</em>{% endblocktrans %}</a></p>
+
+{% endblock %}
